--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:image"
-      content="https://i.pinimg.com/736x/72/4f/f5/724ff51bdd8177a81bd6130e82fdd2be.jpg"
+      content="https://i.postimg.cc/vBvszHTz/Screenshot-2025-07-12-105204.png"
     />
     <meta property="og:url" content="https://djbijayadas.vercel.app/" />
     <meta property="og:type" content="website" />
@@ -43,7 +43,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://i.pinimg.com/736x/72/4f/f5/724ff51bdd8177a81bd6130e82fdd2be.jpg"
+      content="https://i.postimg.cc/vBvszHTz/Screenshot-2025-07-12-105204.png"
     />
 
     <!-- Responsive Design -->
