--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>DJ Bijaya Das | Official Website</title>
 
     <!-- Favicon -->
     <link
@@ -21,7 +24,7 @@
     />
     <meta name="author" content="DJ Bijaya Das" />
 
-    <!-- Open Graph Meta Tags (Facebook, WhatsApp, LinkedIn, etc.) -->
+    <!-- Open Graph Meta Tags (for Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="DJ Bijaya Das | Official Website" />
     <meta
       property="og:description"
@@ -45,11 +48,6 @@
       name="twitter:image"
       content="https://i.postimg.cc/vBvszHTz/Screenshot-2025-07-12-105204.png"
     />
-
-    <!-- Responsive Design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>DJ Bijaya Das | Official Website</title>
   </head>
   <body>
     <div id="root"></div>
