--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       property="og:image"
       content="https://i.postimg.cc/vBvszHTz/Screenshot-2025-07-12-105204.png"
     />
-    <meta property="og:url" content="https://djbijayadas.vercel.app/" />
+    <meta property="og:url" content="https://webdjproject.netlify.app/" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Meta Tags -->
